fixed alignment

--- a/src/components/VehiclesList/VehicleListItem.scss
+++ b/src/components/VehiclesList/VehicleListItem.scss
@@ -3,13 +3,16 @@
 
 .vehicles-list__item {
   @include card($grey, #fff);
-  margin: 10px;
+  margin: 6px;
   padding: 2px;
-  width: 300px;
-  height: 250px;
-  display: flex;
+  height: 200px;
+  display: inline-block;
+  width: 100%;
   cursor: pointer;
-  flex-direction: column;
+
+  @media screen and (min-width: 1031px) {
+    width: 24%;
+  }
 
   h3 {
     font-size: 1.3rem;
@@ -29,14 +32,22 @@
 }
 
 .list-item-grid {
-  flex-direction: column;
-  justify-content: space-around;
 }
 
 .list-item-list {
-  flex-direction: row;
   width: 100%;
   height: 40px;
   line-height: 35px;
-  justify-content: space-around;
+
+  h3 {
+    display: inline-block;
+  }
+
+  p {
+    display: inline-block;
+
+    span {
+      display: inline-block;
+    }
+  }
 }
