--- a/src/components/VehiclesList/VehiclesList.scss
+++ b/src/components/VehiclesList/VehiclesList.scss
@@ -6,14 +6,16 @@
   flex-direction: column;
   padding: 0 10%;
   margin: unset;
+  justify-content: center;
+  align-items: center;
 
   .vehicles-list__list {
-    margin-left: 0;
-    padding-left: 0;
-    display: flex;
     list-style: none;
-    flex-wrap: wrap;
-    justify-content: center;
+    display: block;
+    margin: 0 auto;
+    max-width: 1200px;
+    width: 100%;
+    padding-left: 0;
   }
 
   .ul-grid {
